--- a/modules/ordsky.html
+++ b/modules/ordsky.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="contact form example">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src='ordskymodul.js'></script>  
+	<script src='ordsky.js'></script>  
 
 </head>
 
