--- a/modules/wordcloud/wordcloud.html
+++ b/modules/wordcloud/wordcloud.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="contact form example">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" href="http://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">    
+	<link rel="stylesheet" href="https://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">    
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="http://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script>
 	<script src="d3.js" charset="utf-8"></script>
     <script src="d3.layout.cloud.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -15,9 +14,11 @@
 
 </head>
 
-<body>
+<body style="background-color:transparent">
+Hva tenker du på? Bruk , dersom du tenker på flere ting :)
 <div id="wordcloudInput"></div>
-<div id="wordcloud" width="100%" height="100%"></div>
+<div id="wordcloud" style="display:none" width="100%" height="100%"></div>
+<script src="https://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script>
 
 </body>
 </html>
