--- a/modules/wordcloud/wordcloud.html
+++ b/modules/wordcloud/wordcloud.html
@@ -11,13 +11,21 @@
     <script src="d3.layout.cloud.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src='wordcloud.js'></script>  
-
+	<style>
+	.svg-container { 
+	display: inline-block;
+	position: relative;
+	width: 100%;
+	padding-bottom: 100%; 
+	vertical-align: middle; 
+	overflow: hidden; 
+}
+	</style>
 </head>
 
 <body style="background-color:transparent">
-Hva tenker du på? Bruk , dersom du tenker på flere ting :)
 <div id="wordcloudInput"></div>
-<div id="wordcloud" style="display:none" width="100%" height="100%"></div>
+<div id="wordcloud" class="svg-container"></div>
 <script src="https://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script>
 
 </body>
