Update svg style.

--- a/modules/wordcloud/wordcloud.html
+++ b/modules/wordcloud/wordcloud.html
@@ -20,6 +20,12 @@
 	vertical-align: middle; 
 	overflow: hidden; 
 }
+.svg-content { 
+	display: inline-block;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
 	</style>
 </head>
 
