--- a/data-udir-no/eksempler/sparql.html
+++ b/data-udir-no/eksempler/sparql.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
+<title>UDIR kompetansemålsøk vha Javascript og SparQL</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="sparql.js"></script>
 </head>
