Do not depend on class name for iframe resizing.

--- a/modules/wordcloud/testWordcloud.html
+++ b/modules/wordcloud/testWordcloud.html
@@ -6,7 +6,11 @@
 <body>
 Here is some text explaining what words to enter in the wordcloud and that you can enter 
 several words, separated by ,.
-<iframe class="PfDKAutoResize" src="http://localhost:8888/wordcloud/wordcloud.html?scriptUrl=https://script.google.com/macros/s/AKfycbx1PUclOqxfO_Ac10Vs2E9MtI8DbCosiAm8a5nPy9Q1wzcpyiQ_/exec&hide" width="100%" height="100%""></iframe>
+<iframe 
+src="https://pfdk.github.io/modules/wordcloud/wordcloud.html?scriptUrl=https://script.google.com/macros/s/AKfycbx1PUclOqxfO_Ac10Vs2E9MtI8DbCosiAm8a5nPy9Q1wzcpyiQ_/exec"  
+width="100%" 
+height="100%">
+</iframe>
 Here is some text below the responsive iframe.
 </body>
 </html>
