--- a/data-udir-no/eksempler/sparql.html
+++ b/data-udir-no/eksempler/sparql.html
@@ -7,8 +7,8 @@
 	<script src="sparql.js"></script>
 </head>
 <body>
-Søk etter setning i læreplan
-<input id="sokeOrd" type="text" size="100"></input>
+Søk etter ord eller setning i læreplan
+<input id="sokeOrd" type="text" size="100"/>
 <button id="sok">Søk</button>
 <div id="resultat"></div>
 </body>
