--- a/modules/bouncetest/embedbouncetest.html
+++ b/modules/bouncetest/embedbouncetest.html
@@ -7,7 +7,9 @@ Text before iframe.
 <iframe 
 src="bouncetest.html"  
 width="100%" 
-height="100%">
+height="100%"
+scrolling="no"
+frameborder="0">
 </iframe>
 Here is some text below the responsive iframe.
 </body>
