Flytt søkeeksempel til egen mappe.

--- a/data-udir-no/eksempler/soek/sparql.html
+++ b/data-udir-no/eksempler/soek/sparql.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="no">
 <head>
 <meta charset="UTF-8">
 <title>UDIR kompetansemålsøk vha Javascript og SparQL</title>
