Correct link to jQuery.

--- a/data-udir-no/eksempler/tverrfaglig/tverrfaglig.html
+++ b/data-udir-no/eksempler/tverrfaglig/tverrfaglig.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">   
 	<link rel="stylesheet" href="tverrfaglig.css">   
 	<link rel="stylesheet" href="../wordcloud.css">   
-	<script src="../jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="../d3.js" charset="utf-8"></script>
     <script src="../d3.layout.cloud.js"></script>
 	<script src='../grepjsapi.js'></script>  
