Update sparql.html/js to use API.

--- a/data-udir-no/eksempler/soek/sparql.html
+++ b/data-udir-no/eksempler/soek/sparql.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>UDIR kompetansemålsøk vha Javascript og SparQL</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src='../grepjsapi.js'></script>  
 	<script src="sparql.js"></script>
 </head>
 <body>
