Add wiremagic pb3 support.

--- a/modules/ytexample.html
+++ b/modules/ytexample.html
@@ -6,7 +6,10 @@
 <script src="youtube.js"></script>
 <link rel="stylesheet" href="youtube.css">
 <body>
-<p><iframe id="Lm0m4VtZ3Us" src="https://www.youtube.com/embed/Lm0m4VtZ3Us?enablejsapi=1" width="560" height="315" allowfullscreen="allowfullscreen"></iframe></p>
+<p>
+    <iframe id="t2AH0T8Wa4U" src="https://www.youtube.com/embed/t2AH0T8Wa4U?enablejsapi=1" 
+width="560" height="315" allowfullscreen="allowfullscreen"></iframe>
+</p>
 <div id="videoTranscriptLm0m4VtZ3Us" class="mmocVideoTranscript" data-language="no" data-name="bokm&aring;l"></div>
 </body>
 </html>
