--- a/modules/ytexample.html
+++ b/modules/ytexample.html
@@ -6,7 +6,8 @@
 <script src="youtube.js"></script>
 <link rel="stylesheet" href="youtube.css">
 <body>
-<p><iframe id="Lm0m4VtZ3Us" src="https://www.youtube.com/embed/Lm0m4VtZ3Us?enablejsapi=1" width="560" height="315" allowfullscreen="allowfullscreen"></iframe></p>
-<div id="videoTranscriptLm0m4VtZ3Us" class="mmocVideoTranscript" data-language="no" data-name="bokm&aring;l"></div>
+<p><iframe id="t2AH0T8Wa4U" src="https://www.youtube.com/embed/t2AH0T8Wa4U?enablejsapi=1" 
+    width="560" height="315" allowfullscreen="allowfullscreen"></iframe></p>
+<div id="videoTranscriptt2AH0T8Wa4U" class="mmocVideoTranscript" data-language="en" data-name=""></div>
 </body>
 </html>
