--- a/modules/wordcloud/wordcloud.html
+++ b/modules/wordcloud/wordcloud.html
@@ -22,7 +22,7 @@
 	position: relative;
 	width: 100%;
 	padding-bottom: 100%;
-	vertical-align: top;
+	vertical-align: middle;
 	overflow: hidden;
 }
 .svg-content {
