--- a/modules/wordcloud/wordcloud.html
+++ b/modules/wordcloud/wordcloud.html
@@ -11,10 +11,13 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src='wordcloud.js'></script>
 	<style>
+
   .input-area {
     display: inline-block;
-  	position: relative;
+    font-size: 150%;
+  	position: absolute;
   	width: 100%;
+    background-color: #343434;
   }
 
 	.svg-container {
